<resources>
    <string name="app_name">Places Search</string>
    <string name="tab_text_search">SEARCH</string>
    <string name="tab_text_favorites">FAVORITES</string>
    <string name="action_settings">Settings</string>
    <string name="req_error">Please enter mandatory field.</string>
    <string name="common_error">Error occured.</string>
    <string name="req_error_toast">Please fix all fields with errors</string>

    <string-array name="map_mode_array">
        <item>Driving</item>
        <item>Walking</item>
        <item>Transit</item>
        <item>Bicycling</item>
    </string-array>

    <string-array name="review_type_array">
        <item>Google Reviews</item>
        <item>Yelp Reviews</item>
    </string-array>

    <string-array name="review_sort_array">
        <item>Default Order</item>
        <item>Highest Rating</item>
        <item>Lowest Rating</item>
        <item>Most Recent</item>
        <item>Least Recent</item>
    </string-array>

    <string-array name="category_array">
        <item value ="default">Default</item>
        <item value ="airport">Airport</item>
        <item value ="amusement_park">Amusement Park</item>
        <item value ="aquarium">Aquarium</item>
        <item value ="art_gallery">Art Gallery</item>
        <item value ="bakery">Bakery</item>
        <item value ="bar">Bar</item>
        <item value ="beauty_salon">Beauty Salon</item>
        <item value ="bowling_alley">Bowling Alley</item>
        <item value ="bus_station">Bus Station</item>
        <item value ="cafe">Cafe</item>
        <item value ="camp_ground">Camp Ground</item>
        <item value ="car_rental">Car Rental</item>
        <item value ="casino">Casino</item>
        <item value ="lodging">Lodging</item>
        <item value ="movie_theatre">Movie Theatre</item>
        <item value ="museum">Museum</item>
        <item value ="night_club">Night Club</item>
        <item value ="park">Park</item>
        <item value ="parking">Parking</item>
        <item value ="restaurant">Restaurant</item>
        <item value ="shopping_mall">Shopping Mall</item>
        <item value ="stadium">Stadium</item>
        <item value ="subway_station">Subway Station</item>
        <item value ="taxi_stand">Taxi Stand</item>
        <item value ="train_station">Train Station</item>
        <item value ="transit_station">Transit Station</item>
        <item value ="travel_agency">Travel Agency</item>
        <item value ="zoo">Zoo</item>
    </string-array>

    <string-array name="category_array_values">
        <item>default</item>
        <item>airport</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>bakery</item>
        <item>bar</item>
        <item>beauty_salon</item>
        <item>bowling_alley</item>
        <item>bus_station</item>
        <item>cafe</item>
        <item>camp_ground</item>
        <item>car_rental</item>
        <item>casino</item>
        <item>lodging</item>
        <item>movie_theatre</item>
        <item>museum</item>
        <item>night_clubb</item>
        <item>park</item>
        <item>parking</item>
        <item>restaurant</item>
        <item>shopping_mall</item>
        <item>stadium</item>
        <item>subway_station</item>
        <item>taxi_stand</item>
        <item>train_station</item>
        <item>transit_station</item>
        <item>travel_agency</item>
        <item>zoo</item>
    </string-array>
    <string name="title_activity_details">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tabInfoText">Info</string>
    <string name="tabPhotosText">Photos</string>
    <string name="tabMapsText">Map</string>
    <string name="tabReviewsText">Reviews</string>
    <string name="txtAddress">Address</string>
    <string name="txtPhone">Phone Number</string>
    <string name="txtPiceLevel">Price Level</string>
    <string name="txtRating">Rating</string>
    <string name="txtGoogle">Google Page</string>
    <string name="txtWebsite">Website</string>
    <string name="fromMap">From</string>
    <string name="travelMode">Travel Mode</string>
    <string name="no_data_available">No Records</string>
    <string name="btnNext">Next</string>
    <string name="btnPrevious">Previous</string>

    <string name="tableFavorites">FAVORITES</string>
    <string name="tableSearchResults">SEARCH_RESULTS</string>
    <string name="txtNoFavorites">No favorites</string>
    <string name="txtNoReviews">No reviews</string>
    <string name="txtNoPhotos">No photos</string>
    <string name="tab_text_info">INFO</string>
    <string name="tab_text_photo">PHOTOS</string>
    <string name="tab_text_maps">MAP</string>
    <string name="tab_text_reviews">REVIEWS</string>
    <string name="txtNoResults">No results</string>
</resources>
