<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="simar.travelentapp.Activities.Details">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnShare"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/share"
                    android:onClick="shareOnTwitter"/>

                <Button
                    android:id="@+id/btnFavorite"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/heart_white"
                    android:onClick="addRemoveFavorite"/>
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/tabInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabInfoText" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabPhotosText" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabMaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabMapsText" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabReviewsText" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</android.support.design.widget.CoordinatorLayout>
